# INF-04-rozwiazania

./: .gitignore  README.md
2023/inf04-2023-czerwiec/Aplikacja Desktopowa/: INF04-Aplikacja-Desktopowa.sln
2023/inf04-2023-czerwiec/Aplikacja Desktopowa/INF04-Aplikacja-Desktopowa/: Form1.Designer.cs  Form1.cs  INF04-Aplikacja-Desktopowa.csproj  Program.cs
2023/inf04-2023-czerwiec/Aplikacja Desktopowa/INF04-Aplikacja-Desktopowa/Properties/: Resources.Designer.cs  Resources.resx
2023/inf04-2023-czerwiec/Aplikacja Konsolowa/C#/: Program.cs
2023/inf04-2023-czerwiec/Aplikacja Konsolowa/C++/: main.cpp
2023/inf04-2023-czerwiec/Aplikacja Konsolowa/Python/: main.py
2023/inf04-2023-styczen/Aplikacja Desktopowa/: INF-04 Aplikacja Desktopowa.sln
2023/inf04-2023-styczen/Aplikacja Desktopowa/INF-04 Aplikacja Desktopowa/: Form1.Designer.cs  Form1.cs
2023/inf04-2023-styczen/Aplikacja Konsolowa/C++/: CMakeLists.txt  main.cpp
2023/inf04-2023-styczen/Aplikacja Konsolowa/Python/: main.py
2023/template/INF-04 Aplikacja Desktopowa/: Form1.Designer.cs  Form1.cs  INF-04 Aplikacja Desktopowa.csproj  Program.cs
2024/arkusze/: zrodlo.txt
2024/inf04-2024-styczen/Aplikacja Desktopowa/INF04-Aplikacja-Desktopowa/: Form1.Designer.cs  Form1.cs  Program.cs
2024/inf04-2024-styczen/Aplikacja Konsolowa/C#/: Program.cs
2024/inf04-2024-styczen/Aplikacja Konsolowa/C++/: main.cpp
2024/inf04-2024-styczen/Aplikacja Konsolowa/python/: main.py
2024/inf04-2024-styczen/C++/: CMakeLists.txt  main.cpp
(+2 files in other folders)
